--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   background-color: #faf8ef;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: fixed;
   width: 100%;
   height: 100%;
@@ -22,7 +22,7 @@ body {
 .container {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
   position: relative;
   margin: auto;
   font-family: "Courier New", sans-serif;
